# WebServ

./: .gitignore  CMakeLists.txt  Config.conf  HttpRequest.cpp  HttpResponse.cpp  HttpResponse.hpp  Makefile  Net.cpp  Net.hpp  README.md  index.html  lib.cpp  lib.hpp  main.cpp  server_main.cpp  test_date.cpp  test_script.sh  webserv
Bonus/: Server.cpp  Server.hpp  Threadpool.hpp  Worker.cpp  Worker.hpp
Bonuses/: HTTP_BONUS.cpp
CGI_Scrypts/: add.py  simple_scrypt.c
Parser/: Config.cpp  Config.hpp  Location.cpp  Location.hpp  ServConf.cpp
Request-Response/: Client.cpp  Client.hpp  Response.cpp  Response.hpp
Request_Processing/: CGI.cpp  CGI.hpp  File.cpp  File.hpp  HTTP.cpp  HTTP.hpp
Serv/: .gitignore  AServer.hpp  CGI.cpp  CGI.hpp  CGI_info  CMakeLists.txt  Client.cpp  Client.hpp  Config.conf  Config.txt  Debug.hpp  File.cpp  File.hpp  HTTP.cpp  HTTP.hpp  HTTP_BONUS.cpp  HTTP_BONUS.hpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  Makefile  Net.cpp  Net.hpp  README.md  Response.cpp  Response.hpp  Server.cpp  Server.hpp  a.out  client_main.cpp  error.html  lib.cpp  lib.hpp  listing.html  main.cpp  server  server_main.cpp  test_for_file.cpp  threadpool.hpp  utils.cpp  (+3 more)
Serv/CGI_Scrypts/: adduser.php  adduser.pl  simple  simple_scrypt.cpp
Serv/Parser/: Config.cpp  Config.hpp  Location.cpp  Location.hpp  ServConf.cpp  ServConf.hpp  parser_utils.cpp  parser_utils.hpp
Serv/YoupiBanane/: youpi.bad_extension
Serv/conf/: template.conf  webserv.conf
Serv/testfiles/testfiles_in_testfiles/: test.txt
Serv/website/: index.html
Serv/website/YoupiBanane/nop/: other.pouic
Server/: AServer.hpp  Server.cpp  Server.hpp
Test nginx/: Dockerfile  docker_start.sh  index.html
Test nginx/conf.d/: default.conf
Utils/: AServer.hpp  Debug.hpp  main.cpp  utils.cpp  utils_for_file.hpp
conf/: broken_ports.conf  main.conf  regexp.conf  template.conf  webserv2.conf  webserv_2.conf
website/: adduser.php  big.html  error.html  index.html  info.php
